compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__no_eq_after_binding_snapshot_1.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 605
expression: let wibble
snapshot_kind: text
---
----- SOURCE CODE
let wibble

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:5
  │
1 │ let wibble
  │     ^^^^^^ I was expecting a '=' after this
